# autoschematic-connector-k8s

./: Cargo.toml  autoschematic.connector.ron  rustfmt.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: addr.rs
src/: addr.rs  connector.rs  main.rs  neat.rs  op.rs  resource.rs  util.rs
src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
