[package]
name = "autoschematic-connector-k8s-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
autoschematic-core = { path = "../../../autoschematic/autoschematic-core", version = "0.4.0"}

[dependencies.autoschematic-connector-k8s]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "addr"
path = "fuzz_targets/addr.rs"
test = false
doc = false
bench = false
