[package]
name = "autoschematic-connector-k8s-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
autoschematic-core = { path = "../../../autoschematic/autoschematic-core", version = "0.8.0" }

[dependencies.autoschematic-connector-k8s]
path = ".."

[[bin]]
name = "addr"
path = "fuzz_targets/addr.rs"
test = false
doc = false
bench = false
